fix spacing so footer doesn't cover content

--- a/kml_new.css
+++ b/kml_new.css
@@ -78,6 +78,11 @@ nav > ul > li:hover::before {
   border-color: #FFDE00;
 }
 
+#logo {
+  /* to offset the #recent_code_link's margin-bottom */
+  margin-top: 100px;
+}
+
 #content {
   padding: 10px 20px;
   position: relative;
@@ -142,13 +147,23 @@ p {
 #about_content > a {
   text-decoration: none;
 }
-#about_content > a > pre {
+#recent_code_link {
+  display: block;
+  /* account for footer height */
+  margin-bottom: 100px;
+  border: none;
+}
+#recent_code_link:hover {
+  display: block;
+  margin-bottom: 100px;
+}
+#recent_code_link > pre {
   max-height: 0;
   transition: all 0.6s ease-out;
   opacity: 0;
   overflow: hidden;
 }
-#about_content.loaded > a > pre {
+#about_content.loaded > #recent_code_link > pre {
   opacity: 1;
   /* js max-height setting */
 }
